Add route for updating employee
